tests/ui/type-alias-impl-trait/taint.stderr
error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/taint.rs:14:17
   |
LL | type Two<'a, 'b> = impl std::fmt::Debug;
   |          -- this generic parameter must be used with a generic lifetime parameter
...
LL |     let c1 = || set(x);
   |                 ^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
